--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "oasysdb"
 version = "0.8.0"
-edition = "2021"
-authors = ["Edwin Kys"]
+edition = "2024"
+authors = ["Edwin Kys", "AsukaMilet"]
 
 [dependencies]
-tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
-hashbrown = { version = "0.15.0", features = ["serde", "rayon"] }
-uuid = { version = "1.10.0", features = ["v4", "serde"] }
-clap = "4.5.16"
+tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
+hashbrown = { version = "0.15.4", features = ["serde", "rayon"] }
+uuid = { version = "1.17.0", features = ["v4", "serde"] }
+clap = "4.5.41"
 
 # gRPC-related dependencies
-tonic = "0.12.1"
+tonic = "0.13.1"
 prost = "0.13.1"
 
 # Serialization-related dependencies
@@ -19,16 +19,16 @@ serde = { version = "1.0.208", features = ["derive"] }
 bincode = "1.3.3"
 
 # Parallelism-related dependencies
-simsimd = "5.0.1"
+simsimd = "6.5.0"
 rayon = "1.10.0"
 
 # Logging-related dependencies
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 
 # Utility dependencies
-rand = "0.8.5"
+rand = "0.9.2"
 dotenv = "0.15.0"
 
 [build-dependencies]
-tonic-build = "0.12"
+tonic-build = "0.13.1"
